gitops/infra/onprem/proxy/synology/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synology
  labels:
    app: synology
  namespace: onprem-proxy
spec:
  type: ExternalName
  externalName: 10.0.1.3
  ports:
  - name: http
    port: 5000
